--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Protfolio</title>
+    <title>CREATIVE UI DESIGNER PORTFOLIO</title>
 
     <link rel="stylesheet" href="style/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
 </head>
+
+
 <body>
-    <h1>HI , Je suis develloper web</h1>
+    <nav class="navbar">
+        <h2>SaulDesign</h2>
+
+        <ul class="navbar_link">
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#AboutMe">About Me</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section>
+
+        <div class="header_titre_img">
+            <div>
+                <h1 class="titre">CREATIVE UI <br> <span>DESIGNER</span></h1>
+                
+                <a class="bt1" href="#"> Hire me </a>
+
+            </div>
+            <img src="./recources/imgs/Group 2373.png" alt="">
+        </div>
+        
+    </section>
 </body>
 </html>
