--- a/src/index.html
+++ b/src/index.html
@@ -29,13 +29,12 @@
     <section>
 
         <div class="header_titre_img">
-            <div>
+            <div class="header_titre">
                 <h1 class="titre">CREATIVE UI <br> <span>DESIGNER</span></h1>
-                
-                <a class="bt1" href="#"> Hire me </a>
-
+                <button class="btn">Hire me</button>
+                <button class="btn">Download CV</button>
             </div>
-            <img src="./recources/imgs/Group 2373.png" alt="">
+            <img src="./resources/imgs/Group 2373.png" alt="">
         </div>
         
     </section>
