--- a/src/index.html
+++ b/src/index.html
@@ -17,26 +17,33 @@
 
 <body>
     <nav class="navbar">
-        <h2>SaulDesign</h2>
+        <div>
+            <h2>SaulDesign</h2>
 
-        <ul class="navbar_link">
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#AboutMe">About Me</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+            <ul class="navbar_link">
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#AboutMe">About Me</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+       
     </nav>
-
     <section>
 
         <div class="header_titre_img">
             <div class="header_titre">
                 <h1 class="titre">CREATIVE UI <br> <span>DESIGNER</span></h1>
-                <button class="btn">Hire me</button>
-                <button class="btn">Download CV</button>
+                <div class="header_button">
+                    <div>
+                        <button class="btn">Hire me</button>
+                    </div>
+                    <div>
+                        <button class="btn rever">Download CV <img src="resources/imgs/download.png" alt=""></button>
+                    </div>
+                </div>
             </div>
-            <img src="./resources/imgs/Group 2373.png" alt="">
-        </div>
-        
+            <img class="first_img" src="./resources/imgs/Group 2373.png" alt="">
+        </div>       
     </section>
 </body>
 </html>
