--- a/src/index.html
+++ b/src/index.html
@@ -29,16 +29,18 @@
        
     </nav>
     <section>
-
-        <div class="header_titre_img">
-            <div class="header_titre">
-                <h1 class="titre">CREATIVE UI <br> <span>DESIGNER</span></h1>
-                <div class="header_button">
-                    <div>
-                        <button class="btn">Hire me</button>
-                    </div>
-                    <div>
-                        <button class="btn rever">Download CV <img src="resources/imgs/download.png" alt=""></button>
+        <div class="header_titre_img">  
+            <div style="display: flex;">
+                <img src="resources/imgs/Vector 187.png"class="f1" alt="">
+                <div class="header_titre">
+                    <h1 class="titre">CREATIVE UI <br> <span>DESIGNER</span></h1>
+                    <div class="header_button">
+                        <div>
+                            <button class="btn">Hire me</button>
+                        </div>
+                        <div>
+                            <button class="btn rever">Download CV <img src="resources/imgs/download.png" alt=""></button>
+                        </div>
                     </div>
                 </div>
             </div>
