--- a/src/index.html
+++ b/src/index.html
@@ -47,5 +47,19 @@
             <img class="first_img" src="./resources/imgs/Group 2373.png" alt="">
         </div>       
     </section>
+    <section>
+        <div>
+           <div class="chepas">
+                <h2 class="titre">About <span>me</span></h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam ea quaerat expedita. Pariatur neque aut enim laboriosam? Facere, veritatis illo. Voluptates, tempore ut blanditiis ipsam facere cum ullam iusto accusantium eligendi hic laboriosam a corporis, quisquam dolor labore veniam sint, velit mollitia beatae! Rerum laudantium illo repellendus aspernatur consectetur voluptatibus? <a style="font-display:bold;" href="#"> Read more</a></p>
+           </div> 
+           <div>
+
+           </div>
+        </div>
+
+
+
+    </section>
 </body>
 </html>
